# AutomacaoBandaLarga

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  consulta-operadora.py  pipeline_runner.py  pyproject.toml  separador.py  separador_operadora.py
1 - SeparacaoProspect/: requirements.txt  separador.py
2 - ConsultaCnpj/: ConsultaCnpj.py  requirements.txt
3 - Consulta_operadora/: consulta-operadora.py  requirements.txt
4 - ArquivoDiscadora/: requirements.txt  separador_operadora.py
config/: __init__.py  classificacao.py
domain/: __init__.py  empresa.py
infra/: __init__.py  cnpj_api_client.py  cnpj_cache.py
scripts/etapa_1/: separador.py
scripts/etapa_2/: ConsultaCnpj.py
scripts/etapa_3/: consulta_operadora.py
scripts/etapa_4/: separador_operadora.py
tests/: conftest.py  test_cache_expirado.py  test_classificacao.py  test_cnpj_cache.py  test_empresa.py  test_format_cnpj.py  test_verificar_operadora.py
utils/: __init__.py  audit_logger.py  rate_limiter.py  telefone.py
